<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.Modulo3Fragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/modulo3_plain_textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/modulo3_plain"
        app:startIconDrawable="@drawable/ic_modulo3_data"
        app:endIconMode="clear_text"
        app:helperTextEnabled="true"
        app:helperText="@string/modulo3_plain_explain"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/modulo3_key_textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/modulo3_key"
        android:layout_marginTop="20dp"
        app:startIconDrawable="@drawable/ic_modulo3_key"
        app:endIconMode="clear_text"
        app:helperText="@string/modulo3_key_explain"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/modulo3_plain_textField">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/modulo3_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulo3_action_btn"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/modulo3_key_textField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>